# twitSpam

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  hello.cpp  smaller_tweet_data.txt  twitSpam.cpp  twitSpam.db  twitterClient_token_key.txt  vwInputMaker.cpp
src/: #twitSpam.cpp#  .#twitSpam.cpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  add.cpp  add.cpp~  add.h  cmake_install.cmake  cscope.files  cscope.out  curlURL.cpp  ptTwitSpam.cpp  spamCheck.cpp  twitClient_token_key.txt  twitClient_token_secret.txt  twitSpam  twitSpam.cpp  twitterClient_token_secret.txt  user.cpp  user.h  user.h~  userData.cpp  xmlFollowers.txt  xmlFriends.txt  xmlUser.txt  xmlUserTimeline.txt
twitInstall/: Makefile  libtwitcurl.so.1.0  twitcurl.cpp  twitcurl.h
twitInstall/sqliteInstall/: Makefile  config.status  libtool  sqlite3
twitInstall/sqliteInstall/.deps/: shell.Po  sqlite3.Plo
twitInstall/sqliteInstall/.libs/: libsqlite3.so.0  sqlite3
vowpal_wabbit/: Makefile  README  binUserInfo.py  changeUserInfo.py  combineData.cpp  countLinks.cpp  curler.cpp  curler.h  datePeriod.py  examiner.cpp  getUserXML.py  histTrends.py  inputMaker.cpp  inputMakerWithCurl.cpp  inputMakerWithRegex.cpp  layout.org  model.out  notSingleTrends.py  onlyUserInfo.py  output.txt  precisionVsRecall.cpp  preprocess.cpp  results.txt  setter.cpp  smaller_tweet_data.txt  smaller_tweet_data.txt.output  smaller_tweet_data.txt~  sortTweetUserIds.cpp  spamLabel.cpp  spamLabel.py  splitter.cpp  thresholdFinder.cpp  trendCheck.py  trendingTopics.py  tweetFind.py  unnormalized_results.txt  userFind.py  vwInputMaker  vwInputMaker.cpp  vwInputMaker.cpp~  (+1 more)
